refactor: summerize constraints to const.js and related moditications
doc: modify README.md

--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
+# grid(ROW * COLUMN)
 VITE_NERDLE_ROW=6
+# VITE_NERDLE_COLUMN is fixed at 8.
+# TODO: support for 5 or higher
 VITE_NERDLE_COLUMN=8
+
+# mode (not used)
+# TODO: specify problem type.
+VITE_NERDLE_MODE_PLUS=true
+VITE_NERDLE_MODE_MINUS=true
+VITE_NERDLE_MODE_MULTIPLICATION=true
+VITE_NERDLE_MODE_DIVISION=true
